samples/_failures_safe/1761176813_e2f1ec_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9ebe08df.c: In function ‘main’:
./samples/SAFE/__tmp_9ebe08df.c:129:16: error: missing terminating " character
  129 |         printf("Round-trip
      |                ^~~~~~~~~~~
./samples/SAFE/__tmp_9ebe08df.c:129:9: error: expected expression at end of input
  129 |         printf("Round-trip
      |         ^~~~~~
./samples/SAFE/__tmp_9ebe08df.c:129:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9ebe08df.c:129:9: error: expected declaration or statement at end of input
